# chatty-art

./: .gitignore  Cargo.toml  GLOSSARY.md  README.md  USER_MANUAL.md  ecg_window.md  eslint.config.mjs  launch-chatty-art.ps1  package-lock.json  package.json
audio_runtime/: outetts_runner.py  stable_audio_runner.py
diffuse_runtime/examples/server/frontend/: README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
diffuse_runtime/examples/server/frontend/scripts/: build_gen_index_html.js
diffuse_runtime/examples/server/frontend/src/: App.vue
diffuse_runtime/examples/server/frontend/src/components/: FormLabel.vue  FormRadio.vue  FormSelect.vue
diffuse_runtime/examples/server/frontend/src/stores/: options.ts
diffuse_runtime/examples/server/frontend/src/views/: AboutView.vue
src/: audio_runtime.rs  gguf.rs  main.rs  render.rs  runtime.rs  sdcpp.rs  types.rs
static/: app.js  index.html  styles.css
