[package]
name = "chatty-art"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["ws", "json"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
futures-util = "0.3.31"
gif = "0.13.3"
hound = "3.5.1"
image = { version = "0.25.8", default-features = false, features = ["gif", "jpeg", "png"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
walkdir = "2.5.0"
webbrowser = "1.0.6"
